Fixing minor formatting issues on smaller screen devices. Loader is now full screen.

--- a/css/loader.css
+++ b/css/loader.css
@@ -37,12 +37,16 @@
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
+
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
   }
   
   
   #monitor {
     margin: 2em auto;
-    width: 90vmin;
     display: flex;
     flex-direction: column;
     align-items: center;
