--- a/css/resume.css
+++ b/css/resume.css
@@ -493,21 +493,37 @@ li:hover li:active {
   text-decoration: underline;
 }
 
-.fullPageBackground {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.video-container {
   position: absolute;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
   top: 0;
-  left: 0;
+  bottom: 0;
   right: 0;
-  z-index: -999;
+  left: 0;
+  max-width: 100%;
+  max-height: 100%;
+
   object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: -999;
+}
+.video-container > video {
+  display: block;
+  z-index: -999;
+}
+@media screen and (min-width: 992px) {
+  .video-container > video {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 992px) {
+  .video-container > video {
+    height: 100%;
+  }
 }
 
 .darkMode {
